modified pytorch dense reader notebook, removed sparse reader notebook

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -19,6 +19,7 @@
    "execution_count": 1,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -157,9 +158,9 @@
      "text": [
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 27), tile=28, dtype='int32'),\n",
-      "    Dim(name='dim_2', domain=(0, 27), tile=28, dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 27), tile='28', dtype='int32'),\n",
+      "    Dim(name='dim_2', domain=(0, 27), tile='28', dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='uint8', var=False, nullable=False),\n",
@@ -173,7 +174,7 @@
       "\n",
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='uint8', var=False, nullable=False),\n",
@@ -221,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15c070e50>"
+       "<matplotlib.image.AxesImage at 0x16ff02910>"
       ]
      },
      "execution_count": 5,
@@ -276,46 +277,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 7.687702\n",
-      "Train Epoch: 1 Batch: 100 Loss: 2.296125\n",
-      "Train Epoch: 1 Batch: 200 Loss: 2.309052\n",
-      "Train Epoch: 1 Batch: 300 Loss: 2.306211\n",
-      "Train Epoch: 1 Batch: 400 Loss: 2.302584\n",
-      "Train Epoch: 1 Batch: 500 Loss: 2.303751\n",
-      "Train Epoch: 1 Batch: 600 Loss: 2.301477\n",
-      "Train Epoch: 1 Batch: 700 Loss: 2.304769\n",
-      "Train Epoch: 1 Batch: 800 Loss: 2.303296\n",
-      "Train Epoch: 1 Batch: 900 Loss: 2.305067\n",
-      "Train Epoch: 2 Batch: 0 Loss: 2.304070\n",
-      "Train Epoch: 2 Batch: 100 Loss: 2.296437\n",
-      "Train Epoch: 2 Batch: 200 Loss: 2.304955\n",
-      "Train Epoch: 2 Batch: 300 Loss: 2.303070\n",
-      "Train Epoch: 2 Batch: 400 Loss: 2.301398\n",
-      "Train Epoch: 2 Batch: 500 Loss: 2.303047\n",
-      "Train Epoch: 2 Batch: 600 Loss: 2.301500\n",
-      "Train Epoch: 2 Batch: 700 Loss: 2.304181\n",
-      "Train Epoch: 2 Batch: 800 Loss: 2.303619\n",
-      "Train Epoch: 2 Batch: 900 Loss: 2.304685\n",
-      "Train Epoch: 3 Batch: 0 Loss: 2.303850\n",
-      "Train Epoch: 3 Batch: 100 Loss: 2.297058\n",
-      "Train Epoch: 3 Batch: 200 Loss: 2.304744\n",
-      "Train Epoch: 3 Batch: 300 Loss: 2.303025\n",
-      "Train Epoch: 3 Batch: 400 Loss: 2.301460\n",
-      "Train Epoch: 3 Batch: 500 Loss: 2.303020\n",
-      "Train Epoch: 3 Batch: 600 Loss: 2.301539\n",
-      "Train Epoch: 3 Batch: 700 Loss: 2.304121\n",
-      "Train Epoch: 3 Batch: 800 Loss: 2.303588\n",
-      "Train Epoch: 3 Batch: 900 Loss: 2.304644\n",
-      "Train Epoch: 4 Batch: 0 Loss: 2.303827\n",
-      "Train Epoch: 4 Batch: 100 Loss: 2.297126\n",
-      "Train Epoch: 4 Batch: 200 Loss: 2.304722\n",
-      "Train Epoch: 4 Batch: 300 Loss: 2.303020\n",
-      "Train Epoch: 4 Batch: 400 Loss: 2.301467\n",
-      "Train Epoch: 4 Batch: 500 Loss: 2.303018\n",
-      "Train Epoch: 4 Batch: 600 Loss: 2.301543\n",
-      "Train Epoch: 4 Batch: 700 Loss: 2.304115\n",
-      "Train Epoch: 4 Batch: 800 Loss: 2.303584\n",
-      "Train Epoch: 4 Batch: 900 Loss: 2.304639\n"
+      "Train Epoch: 1 Batch: 0 Loss: 8.788693\n",
+      "Train Epoch: 1 Batch: 100 Loss: 2.308017\n",
+      "Train Epoch: 1 Batch: 200 Loss: 2.301740\n",
+      "Train Epoch: 1 Batch: 300 Loss: 2.303736\n",
+      "Train Epoch: 1 Batch: 400 Loss: 2.302085\n",
+      "Train Epoch: 1 Batch: 500 Loss: 2.304577\n",
+      "Train Epoch: 1 Batch: 600 Loss: 2.302135\n",
+      "Train Epoch: 1 Batch: 700 Loss: 2.302921\n",
+      "Train Epoch: 1 Batch: 800 Loss: 2.303370\n",
+      "Train Epoch: 1 Batch: 900 Loss: 2.302024\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 2.301898\n",
+      "Train Epoch: 1 Batch: 1100 Loss: 2.301887\n",
+      "Train Epoch: 2 Batch: 0 Loss: 2.302660\n",
+      "Train Epoch: 2 Batch: 100 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 200 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 300 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 400 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 500 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 600 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 700 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 800 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 900 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 2.302583\n",
+      "Train Epoch: 2 Batch: 1100 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 0 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 100 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 200 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 300 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 400 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 500 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 600 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 700 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 800 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 900 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 1000 Loss: 2.302583\n",
+      "Train Epoch: 3 Batch: 1100 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 0 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 100 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 200 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 300 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 400 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 500 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 600 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 700 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 800 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 900 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 1000 Loss: 2.302583\n",
+      "Train Epoch: 4 Batch: 1100 Loss: 2.302583\n"
      ]
     }
    ],
@@ -344,7 +353,13 @@
     "        return logits\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
-    "    tiledb_dataset = PyTorchTileDBDenseDataset(x_array=x, y_array=y, batch_size=64)\n",
+    "    tiledb_dataset = PyTorchTileDBDenseDataset(x_array=x, \n",
+    "                                               y_array=y, \n",
+    "                                               batch_size=64, \n",
+    "                                               buffer_size=300*64, \n",
+    "                                               batch_shuffle=True,\n",
+    "                                               within_batch_shuffle=True,\n",
+    "                                              )\n",
     "    train_loader = torch.utils.data.DataLoader(tiledb_dataset, batch_size=None, num_workers=2)\n",
     "\n",
     "    net = Net(shape=(28, 28))\n",
@@ -365,6 +380,13 @@
     "                print('Train Epoch: {} Batch: {} Loss: {:.6f}'.format(\n",
     "                epoch, batch_idx, loss.item()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -383,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
