--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -227,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x175806510>"
+       "<matplotlib.image.AxesImage at 0x1794d70d0>"
       ]
      },
      "execution_count": 6,
@@ -318,15 +318,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "938/938 [==============================] - 8s 8ms/step - loss: 0.3498 - accuracy: 0.9007\n",
+      "1200/1200 [==============================] - 4s 2ms/step - loss: 0.3481 - accuracy: 0.8987.5690 \n",
       "Epoch 2/5\n",
-      "938/938 [==============================] - 7s 8ms/step - loss: 0.1682 - accuracy: 0.9505\n",
+      "1200/1200 [==============================] - 3s 2ms/step - loss: 0.1720 - accuracy: 0.9498\n",
       "Epoch 3/5\n",
-      "938/938 [==============================] - 7s 8ms/step - loss: 0.1260 - accuracy: 0.9629\n",
+      "1200/1200 [==============================] - 4s 2ms/step - loss: 0.1261 - accuracy: 0.9627\n",
       "Epoch 4/5\n",
-      "938/938 [==============================] - 7s 8ms/step - loss: 0.1028 - accuracy: 0.9697\n",
+      "1200/1200 [==============================] - 3s 2ms/step - loss: 0.1012 - accuracy: 0.9690\n",
       "Epoch 5/5\n",
-      "938/938 [==============================] - 8s 8ms/step - loss: 0.0853 - accuracy: 0.9746\n"
+      "1200/1200 [==============================] - 3s 2ms/step - loss: 0.0865 - accuracy: 0.9736\n"
      ]
     }
    ],
@@ -335,7 +335,8 @@
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
     "    tiledb_dataset = TensorflowTileDBDenseDataset(\n",
-    "        x_array=x, y_array=y, x_attribute_names=['features'], y_attribute_names=['features'], batch_size=64\n",
+    "        x_array=x, y_array=y, x_attribute_names=['features'], y_attribute_names=['features'], batch_size=64, \n",
+    "        buffer_size = 300*64, batch_shuffle=True, within_batch_shuffle=False,\n",
     "    )\n",
     "\n",
     "    model.fit(tiledb_dataset, epochs=5)"
