Refactor tensorflow datasets (#99)
* Initial refactoring of Tensorflow readers

* Refactor TensorflowTileDBSparseDataset.__new__

* Add TensorflowTileDBDataset base class for TensorflowTileDBDenseDataset and TensorflowTileDBSparseDataset

* Move TensorflowTileDBSparseDataset to readers.tensorflow, change generators from classmethods to plain functions and move to separate module

* Merge TensorflowTileDBDenseDataset & TensorflowTileDBSparseDataset into TensorflowTileDBDataset

* Make TensorflowTileDBDataset a function

* Replace rows param with offsets in tf generators

* Inline parallel_slice

--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -25,7 +25,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from tiledb.ml.readers.tensorflow import TensorflowTileDBDenseDataset"
+    "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset"
    ]
   },
   {
@@ -334,7 +334,7 @@
     "model = create_model()\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
-    "    tiledb_dataset = TensorflowTileDBDenseDataset(\n",
+    "    tiledb_dataset = TensorflowTileDBDataset(\n",
     "        x_array=x, y_array=y, x_attribute_names=['features'], y_attribute_names=['features'], batch_size=64, \n",
     "        buffer_size = 300*64, batch_shuffle=True, within_batch_shuffle=False,\n",
     "    )\n",
