--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -435,13 +435,13 @@
     }
    ],
    "source": [
-    "from tiledb.ml.readers.tensorflow_sparse import TensorflowTileDBSparseDataset\n",
+    "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
-    "    tiledb_dataset = TensorflowTileDBSparseDataset(x_array=x, y_array=y, x_attribute_names=['features'], \n",
-    "                                                   y_attribute_names=['features'], batch_size=32, buffer_size=64)\n",
+    "    tiledb_dataset = TensorflowTileDBDataset(x_array=x, y_array=y, x_attribute_names=['features'],\n",
+    "                                             y_attribute_names=['features'], batch_size=32, buffer_size=64)\n",
     "\n",
     "    print(tiledb_dataset)\n",
     "    model = design_model(input_shape=user_movie.shape[1])\n",
