Refactor Pytorch datasets (#102)
* Initial refactoring of PyTorch datasets

* Add PyTorchBatch, PyTorchDenseBatch and PyTorchSparseBatch to abstract Pytorch tensor creation from dense/sparse batches

* Merge PyTorchTileDBDenseDataset and PyTorchTileDBSparseDataset into PyTorchTileDBDataset

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -332,7 +332,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from tiledb.ml.readers.pytorch import PyTorchTileDBDenseDataset\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataset\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self, shape):\n",
@@ -353,13 +353,12 @@
     "        return logits\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
-    "    tiledb_dataset = PyTorchTileDBDenseDataset(x_array=x, \n",
-    "                                               y_array=y, \n",
-    "                                               batch_size=64, \n",
-    "                                               buffer_size=300*64, \n",
-    "                                               batch_shuffle=True,\n",
-    "                                               within_batch_shuffle=True,\n",
-    "                                              )\n",
+    "    tiledb_dataset = PyTorchTileDBDataset(x_array=x,\n",
+    "                                          y_array=y,\n",
+    "                                          batch_size=64,\n",
+    "                                          buffer_size=300*64,\n",
+    "                                          batch_shuffle=True,\n",
+    "                                          within_batch_shuffle=True)\n",
     "    train_loader = torch.utils.data.DataLoader(tiledb_dataset, batch_size=None, num_workers=2)\n",
     "\n",
     "    net = Net(shape=(28, 28))\n",
