--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -492,10 +492,10 @@
     }
    ],
    "source": [
-    "from tiledb.ml.readers.pytorch_sparse import PyTorchTileDBSparseDataset\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataset\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
-    "    tiledb_dataset = PyTorchTileDBSparseDataset(x_array=x, y_array=y, batch_size=32, buffer_size=64)\n",
+    "    tiledb_dataset = PyTorchTileDBDataset(x_array=x, y_array=y, batch_size=32, buffer_size=64)\n",
     "    train_loader = torch.utils.data.DataLoader(tiledb_dataset, batch_size=None)\n",
     "\n",
     "    #Number of ratings x (user + movies)\n",
