Project-wide rename of *attribute_names to *attrs

--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -335,7 +335,7 @@
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
-    "        x_array=x, y_array=y, x_attribute_names=['features'], y_attribute_names=['features'], batch_size=64, \n",
+    "        x_array=x, y_array=y, x_attrs=['features'], y_attrs=['features'], batch_size=64,\n",
     "        buffer_size = 300*64, batch_shuffle=True, within_batch_shuffle=False,\n",
     "    )\n",
     "\n",
