--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -440,8 +440,8 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
-    "    tiledb_dataset = TensorflowTileDBDataset(x_array=x, y_array=y, x_attribute_names=['features'],\n",
-    "                                             y_attribute_names=['features'], batch_size=32, buffer_size=64)\n",
+    "    tiledb_dataset = TensorflowTileDBDataset(x_array=x, y_array=y, x_attrs=['features'],\n",
+    "                                             y_attrs=['features'], batch_size=32, buffer_size=64)\n",
     "\n",
     "    print(tiledb_dataset)\n",
     "    model = design_model(input_shape=user_movie.shape[1])\n",
