re-run all model notebooks, fix minor bug in tensorflow model notebook

--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -55,13 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data fetching...\n",
+      "Data scaling...\n"
+     ]
+    }
+   ],
    "source": [
     "train_samples = 5000\n",
     "\n",
@@ -97,13 +106,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model fit...\n",
+      "Model score...\n",
+      "Sparsity with L1 penalty: 75.57%\n",
+      "Test score with L1 penalty: 0.8312\n"
+     ]
+    }
+   ],
    "source": [
     "clf = LogisticRegression(\n",
     "    C=50. / train_samples, penalty='l1', solver='saga', tol=0.1\n",
@@ -138,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -163,13 +183,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['tiledb-sklearn-mnist-1/__meta',\n",
+      " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
+      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10',\n",
+      " 'tiledb-sklearn-mnist-1/__schema',\n",
+      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10.ok']\n",
+      "\n",
+      "Key: Sparsity_with_L1_penalty, Value: 75.57397959183673\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 0.24.1\n",
+      "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
+      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.8\n",
+      "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
+      "Key: score, Value: 0.8312\n"
+     ]
+    }
+   ],
    "source": [
     "# Check array directory\n",
     "pprint(glob.glob('tiledb-sklearn-mnist-1/*'))\n",
@@ -195,13 +235,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: Sparsity_with_L1_penalty, Value: 75.57397959183673\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
+      "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 0.24.1\n",
+      "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
+      "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.8\n",
+      "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
+      "Key: new_meta, Value: [\"Any kind of info\"]\n",
+      "Key: score, Value: 0.8312\n"
+     ]
+    }
+   ],
    "source": [
     "# Open the array in write mode\n",
     "with tiledb.Array('tiledb-sklearn-mnist-1', \"w\") as A:\n",
@@ -233,13 +288,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model score...\n",
+      "Sparsity with L1 penalty: 75.57%\n",
+      "Test score with L1 penalty: 0.8312\n",
+      "Model fit...\n",
+      "Model score...\n",
+      "Sparsity with L1 penalty: 43.01%\n",
+      "Test score with L1 penalty: 0.7322\n",
+      "\n",
+      "['tiledb-sklearn-mnist-1/__meta',\n",
+      " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
+      " 'tiledb-sklearn-mnist-1/__1644837438208_1644837438208_e65e4cce6bb846d19172520ed61e426c_10',\n",
+      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10',\n",
+      " 'tiledb-sklearn-mnist-1/__schema',\n",
+      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10.ok',\n",
+      " 'tiledb-sklearn-mnist-1/__1644837438208_1644837438208_e65e4cce6bb846d19172520ed61e426c_10.ok']\n",
+      "\n",
+      "====== FRAGMENTS  INFO ======\n",
+      "array uri: tiledb-sklearn-mnist-1\n",
+      "number of fragments: 2\n",
+      "\n",
+      "===== FRAGMENT NUMBER 0 =====\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/models/tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10\n",
+      "timestamp range: (1644837426295, 1644837426295)\n",
+      "number of unconsolidated metadata: 2\n",
+      "version: 10\n",
+      "\n",
+      "===== FRAGMENT NUMBER 1 =====\n",
+      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/models/tiledb-sklearn-mnist-1/__1644837438208_1644837438208_e65e4cce6bb846d19172520ed61e426c_10\n",
+      "timestamp range: (1644837438208, 1644837438208)\n",
+      "number of unconsolidated metadata: 2\n",
+      "version: 10\n"
+     ]
+    }
+   ],
    "source": [
     "loaded_clf = tiledb_model_1.load()\n",
     "\n",
@@ -286,14 +379,7 @@
     "    print()\n",
     "    print(\"===== FRAGMENT NUMBER {} =====\".format(fragment.num))\n",
     "    print(\"fragment uri: {}\".format(fragment.uri))\n",
-    "    print(\"is dense: {}\".format(fragment.dense))\n",
-    "    print(\"is sparse: {}\".format(fragment.sparse))\n",
-    "    print(\"cell num: {}\".format(fragment.cell_num))\n",
-    "    print(\"has consolidated metadata: {}\".format(fragment.has_consolidated_metadata))\n",
-    "    print(\"non empty domain: {}\".format(fragment.non_empty_domain))\n",
     "    print(\"timestamp range: {}\".format(fragment.timestamp_range))\n",
-    "    print(\"number of fragments to vacuum: {}\".format(fragment.to_vacuum_num))\n",
-    "    print(\"uri of fragments to vacuum: {}\".format(fragment.to_vacuum_uri))\n",
     "    print(\n",
     "        \"number of unconsolidated metadata: {}\".format(\n",
     "            fragment.unconsolidated_metadata_num\n",
@@ -316,13 +402,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fit...\n",
+      "Test score: 0.7587\n"
+     ]
+    }
+   ],
    "source": [
     "# We declare a Decision Tree classifier\n",
     "clf = tree.DecisionTreeClassifier()\n",
@@ -352,13 +447,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tiledb.group_create('MNIST_Group')\n",
     "os.system('mv tiledb-sklearn-mnist-1 MNIST_Group/')\n",
@@ -374,23 +480,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file:///Users/george/PycharmProjects/TileDB-ML/examples/models/MNIST_Group/tiledb-sklearn-mnist-1 array\n",
+      "file:///Users/george/PycharmProjects/TileDB-ML/examples/models/MNIST_Group/tiledb-sklearn-mnist-2 array\n"
+     ]
+    }
+   ],
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
