--- a/examples/cloud/models/pytorch_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/models/pytorch_tiledb_cloud_ml_model_array.ipynb
@@ -252,7 +252,7 @@
     "\n",
     "print('Defining PyTorchTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = PyTorchTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
+    "tiledb_model = PyTorchTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model, optimizer=optimizer)\n",
     "\n",
     "# We will need the uri that was created from our model class\n",
     "# (and follows pattern tiledb://my_username/s3://my_bucket/my_array),\n",
@@ -299,7 +299,7 @@
     "loaded_optimizer = optim.SGD(model.parameters(), lr=learning_rate,\n",
     "                             momentum=momentum)\n",
     "\n",
-    "PyTorchTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load(model=loaded_model, optimizer=loaded_optimizer)\n",
+    "PyTorchTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx).load(model=loaded_model, optimizer=loaded_optimizer)\n",
     "\n",
     "\n",
     "# Check model parameters\n",
