--- a/examples/cloud/models/sklearn_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/models/sklearn_tiledb_cloud_ml_model_array.ipynb
@@ -15,7 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -197,9 +201,9 @@
     "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
-    "loaded_tiledb_model = SklearnTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
+    "loaded_tiledb_model = SklearnTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx).load()\n",
     "\n",
-    "print(score == loaded_tiledb_model.score(X_test, y_test))\n",
+    "print(score == loaded_tiledb_model.score(scaled_X_test, y_test))\n",
     "\n",
     "# Deregister model\n",
     "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)"
