--- a/examples/cloud/models/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/models/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -137,15 +137,13 @@
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
     "tiledb_model = TensorflowKerasTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
-    "print(tiledb_model.uri)\n",
-    "\n",
     "# We will need the uri that was created from our model class\n",
     "# (and follows pattern tiledb://my_username/s3://my_bucket/my_array),\n",
     "# in order to interact with our model on TileDB-Cloud.\n",
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
     "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
-    "tiledb_model.save()\n"
+    "tiledb_model.save()"
    ]
   },
   {
@@ -177,7 +175,7 @@
     "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
-    "loaded_model = TensorflowKerasTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
+    "loaded_model = TensorflowKerasTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx,).load()\n",
     "\n",
     "print(np.equal(model.predict(X_test), loaded_model.predict(X_test)))\n",
     "\n",
