remove leftovers from sklearn model notebook

--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -119,8 +119,8 @@
      "text": [
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 75.57%\n",
-      "Test score with L1 penalty: 0.8312\n"
+      "Sparsity with L1 penalty: 69.69%\n",
+      "Test score with L1 penalty: 0.8300\n"
      ]
     }
    ],
@@ -196,17 +196,17 @@
      "text": [
       "['tiledb-sklearn-mnist-1/__meta',\n",
       " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
-      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10',\n",
       " 'tiledb-sklearn-mnist-1/__schema',\n",
-      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10.ok']\n",
+      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10',\n",
+      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10.ok']\n",
       "\n",
-      "Key: Sparsity_with_L1_penalty, Value: 75.57397959183673\n",
+      "Key: Sparsity_with_L1_penalty, Value: 69.6938775510204\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 0.24.1\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
       "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.8\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
-      "Key: score, Value: 0.8312\n"
+      "Key: score, Value: 0.83\n"
      ]
     }
    ],
@@ -246,14 +246,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Key: Sparsity_with_L1_penalty, Value: 75.57397959183673\n",
+      "Key: Sparsity_with_L1_penalty, Value: 69.6938775510204\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK, Value: SKLEARN\n",
       "Key: TILEDB_ML_MODEL_ML_FRAMEWORK_VERSION, Value: 0.24.1\n",
       "Key: TILEDB_ML_MODEL_PREVIEW, Value: LogisticRegression(C=0.01, penalty='l1', solver='saga', tol=0.1)\n",
       "Key: TILEDB_ML_MODEL_PYTHON_VERSION, Value: 3.7.8\n",
       "Key: TILEDB_ML_MODEL_STAGE, Value: STAGING\n",
       "Key: new_meta, Value: [\"Any kind of info\"]\n",
-      "Key: score, Value: 0.8312\n"
+      "Key: score, Value: 0.83\n"
      ]
     }
    ],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -300,35 +300,40 @@
      "output_type": "stream",
      "text": [
       "Model score...\n",
-      "Sparsity with L1 penalty: 75.57%\n",
-      "Test score with L1 penalty: 0.8312\n",
+      "Sparsity with L1 penalty: 45.14%\n",
+      "Test score with L1 penalty: 0.7395\n",
       "Model fit...\n",
       "Model score...\n",
-      "Sparsity with L1 penalty: 43.01%\n",
-      "Test score with L1 penalty: 0.7322\n",
+      "Sparsity with L1 penalty: 45.75%\n",
+      "Test score with L1 penalty: 0.7400\n",
       "\n",
       "['tiledb-sklearn-mnist-1/__meta',\n",
       " 'tiledb-sklearn-mnist-1/__lock.tdb',\n",
-      " 'tiledb-sklearn-mnist-1/__1644837438208_1644837438208_e65e4cce6bb846d19172520ed61e426c_10',\n",
-      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10',\n",
+      " 'tiledb-sklearn-mnist-1/__1645777451654_1645777451654_9a4afd6df5324e04ab010b52ddd3a403_10',\n",
+      " 'tiledb-sklearn-mnist-1/__1645777477746_1645777477746_74943f326a114caa9c0097db8f0bc878_10.ok',\n",
       " 'tiledb-sklearn-mnist-1/__schema',\n",
-      " 'tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10.ok',\n",
-      " 'tiledb-sklearn-mnist-1/__1644837438208_1644837438208_e65e4cce6bb846d19172520ed61e426c_10.ok']\n",
+      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10',\n",
+      " 'tiledb-sklearn-mnist-1/__1645777451654_1645777451654_9a4afd6df5324e04ab010b52ddd3a403_10.ok',\n",
+      " 'tiledb-sklearn-mnist-1/__1645777477746_1645777477746_74943f326a114caa9c0097db8f0bc878_10',\n",
+      " 'tiledb-sklearn-mnist-1/__1645777430190_1645777430190_edce3998d2794393915ac1bde5c48887_10.ok']\n",
       "\n",
       "====== FRAGMENTS  INFO ======\n",
       "array uri: tiledb-sklearn-mnist-1\n",
-      "number of fragments: 2\n",
+      "number of fragments: 3\n",
       "\n",
       "===== FRAGMENT NUMBER 0 =====\n",
-      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/models/tiledb-sklearn-mnist-1/__1644837426295_1644837426295_a76acb12b53e47038ddfe03692f9d72d_10\n",
-      "timestamp range: (1644837426295, 1644837426295)\n",
-      "number of unconsolidated metadata: 2\n",
+      "timestamp range: (1645777430190, 1645777430190)\n",
+      "number of unconsolidated metadata: 3\n",
       "version: 10\n",
       "\n",
       "===== FRAGMENT NUMBER 1 =====\n",
-      "fragment uri: file:///Users/george/PycharmProjects/TileDB-ML/examples/models/tiledb-sklearn-mnist-1/__1644837438208_1644837438208_e65e4cce6bb846d19172520ed61e426c_10\n",
-      "timestamp range: (1644837438208, 1644837438208)\n",
-      "number of unconsolidated metadata: 2\n",
+      "timestamp range: (1645777451654, 1645777451654)\n",
+      "number of unconsolidated metadata: 3\n",
+      "version: 10\n",
+      "\n",
+      "===== FRAGMENT NUMBER 2 =====\n",
+      "timestamp range: (1645777477746, 1645777477746)\n",
+      "number of unconsolidated metadata: 3\n",
       "version: 10\n"
      ]
     }
@@ -378,7 +383,6 @@
     "for fragment_num, fragment in enumerate(fragments_info, start=1):\n",
     "    print()\n",
     "    print(\"===== FRAGMENT NUMBER {} =====\".format(fragment.num))\n",
-    "    print(\"fragment uri: {}\".format(fragment.uri))\n",
     "    print(\"timestamp range: {}\".format(fragment.timestamp_range))\n",
     "    print(\n",
     "        \"number of unconsolidated metadata: {}\".format(\n",
@@ -402,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -414,7 +418,7 @@
      "output_type": "stream",
      "text": [
       "Fit...\n",
-      "Test score: 0.7587\n"
+      "Test score: 0.7646\n"
      ]
     }
    ],
@@ -447,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -460,7 +464,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,6 +494,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
